@@ -1,15 +1,9 @@
 package io.quarkiverse.roq.frontmatter.runtime;
 
-import static io.quarkiverse.tools.stringpaths.StringPaths.addTrailingSlashIfNoExt;
-import static io.quarkiverse.tools.stringpaths.StringPaths.removeLeadingSlash;
-
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Locale;
-import java.util.Map;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.function.Supplier;
 
 import jakarta.enterprise.event.Event;
 
@@ -19,22 +13,18 @@ import io.quarkiverse.roq.exception.RoqException;
 import io.quarkiverse.roq.frontmatter.runtime.config.RoqSiteConfig;
 import io.quarkiverse.roq.frontmatter.runtime.devmode.RoqErrorPage;
 import io.quarkiverse.roq.frontmatter.runtime.model.Page;
-import io.quarkiverse.roq.frontmatter.runtime.model.Site;
-import io.quarkiverse.roq.frontmatter.runtime.utils.Sites;
 import io.quarkus.arc.Arc;
 import io.quarkus.arc.ArcContainer;
 import io.quarkus.arc.InjectableContext.ContextState;
 import io.quarkus.arc.ManagedContext;
 import io.quarkus.arc.impl.LazyValue;
 import io.quarkus.qute.Template;
-import io.quarkus.qute.TemplateInstance;
 import io.quarkus.qute.runtime.TemplateProducer;
 import io.quarkus.runtime.LaunchMode;
 import io.quarkus.runtime.LocalesBuildTimeConfig;
 import io.quarkus.security.identity.CurrentIdentityAssociation;
 import io.quarkus.security.identity.SecurityIdentity;
 import io.quarkus.vertx.http.runtime.CurrentVertxRequest;
-import io.quarkus.vertx.http.runtime.RoutingUtils;
 import io.quarkus.vertx.http.runtime.VertxHttpBuildTimeConfig;
 import io.quarkus.vertx.http.runtime.security.QuarkusHttpUser;
 import io.vertx.core.Handler;
@@ -49,37 +39,31 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
     private final List<String> compressMediaTypes;
     private final RoqSiteConfig config;
     private final LocalesBuildTimeConfig locales;
-    // request path to template path
-    private final Map<String, Supplier<? extends Page>> pages;
-    private final Map<String, Page> extractedPaths;
 
     private final Event<SecurityIdentity> securityIdentityEvent;
     private final CurrentIdentityAssociation currentIdentity;
     private final CurrentVertxRequest currentVertxRequest;
     private final ManagedContext requestContext;
     private final LazyValue<TemplateProducer> templateProducer;
-    private final LazyValue<Site> site;
+    private final LazyValue<RoqPageRenderer> renderer;
 
-    public RoqRouteHandler(String rootPath, VertxHttpBuildTimeConfig httpBuildTimeConfig,
-            Map<String, Supplier<? extends Page>> pages,
+    public RoqRouteHandler(VertxHttpBuildTimeConfig httpBuildTimeConfig,
             RoqSiteConfig config,
             LocalesBuildTimeConfig locales) {
-        this.pages = pages;
         this.compressMediaTypes = httpBuildTimeConfig.enableCompression()
                 ? httpBuildTimeConfig.compressMediaTypes().orElse(List.of())
                 : null;
         this.config = config;
         this.locales = locales;
-        this.extractedPaths = new ConcurrentHashMap<>();
         ArcContainer container = Arc.container();
         this.securityIdentityEvent = container.beanManager().getEvent().select(SecurityIdentity.class);
         this.currentVertxRequest = container.instance(CurrentVertxRequest.class).get();
         this.requestContext = container.requestContext();
         this.currentIdentity = container.instance(CurrentIdentityAssociation.class).get();
-        // TemplateProducer is singleton and we want to initialize lazily
         this.templateProducer = new LazyValue<>(
                 () -> Arc.container().instance(TemplateProducer.class).get());
-        this.site = new LazyValue<>(Sites::getSite);
+        this.renderer = new LazyValue<>(
+                () -> Arc.container().instance(RoqPageRenderer.class).get());
     }
 
     @Override
@@ -121,15 +105,10 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
     }
 
     private void handlePage(RoutingContext rc) {
-        String requestPath = RoutingUtils.resolvePath(rc);
-        LOG.debugf("Handle page: %s", requestPath);
-
-        // Extract the real template path, e.g. /item.html -> web/item
-        Page page = extractedPaths.computeIfAbsent(requestPath, this::extractTemplatePath);
+        Page page = rc.get(RoqPageResolverHandler.ROQ_PAGE_KEY);
         if (page != null) {
             final String templateId = page.source().template().generatedQuteTemplateId();
             Template template = templateProducer.get().getInjectableTemplate(templateId);
-            TemplateInstance instance = template.instance();
             String contentType = template.getVariant().isPresent() ? template.getVariant().get().getContentType()
                     : MimeMapping.getMimeTypeForFilename(templateId);
             Charset charset = template.getVariant().isPresent() ? template.getVariant().get().getCharset()
@@ -153,9 +132,8 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
                 }
             }
 
-            RoqTemplateAttributes.setPageData(instance, page, site.get());
-            instance.setAttribute(TemplateInstance.LOCALE, getLocale(page, rc));
-            instance.renderAsync().whenComplete((r, t) -> {
+            String locale = getLocale(page, rc);
+            renderer.get().render(page, template, locale).whenComplete((r, t) -> {
                 if (t != null) {
                     Throwable rootCause = rootCause(t);
                     LOG.errorf("Error occurred while rendering the template [%s]: %s", page.id(), rootCause.toString());
@@ -189,29 +167,18 @@ public class RoqRouteHandler implements Handler<RoutingContext> {
         return root;
     }
 
-    private Page extractTemplatePath(String path) {
-        path = removeLeadingSlash(path);
-
-        // Check if we have a matching linked template
-        final String link = addTrailingSlashIfNoExt(path);
-        if (pages.containsKey(link)) {
-            return pages.get(link).get();
-        }
-        return null;
-    }
-
     private String getLocale(Page page, RoutingContext rc) {
         Object pageLocale = page.data("locale");
         if (pageLocale != null) {
             return pageLocale.toString();
         }
-        if (!rc.acceptableLanguages().isEmpty()) {
-            return rc.acceptableLanguages().get(0).tag();
+        if (rc != null && !rc.acceptableLanguages().isEmpty()) {
+            return rc.acceptableLanguages().getFirst().tag();
         }
         if (config.defaultLocale() != null) {
             return config.defaultLocale();
         }
-        return locales.defaultLocale().map(Locale::getDisplayLanguage).orElse(null);
+        return locales.defaultLocale().map(Locale::toLanguageTag).orElse(null);
     }
 
 }
